--- a/RouteCar/app/src/main/res/layout/layout1.xml
+++ b/RouteCar/app/src/main/res/layout/layout1.xml
@@ -1,10 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
+    android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:orientation="vertical">
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
+        android:id="@+id/fromText"
         android:layout_weight="1" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/toText"
+        android:layout_weight="1" />
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#80000000">
+
+        <com.skobbler.ngx.map.SKMapViewHolder
+            android:id="@+id/view_group_map"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+        <RelativeLayout
+            android:id="@+id/chess_board_background"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:background="@drawable/map_background">
+
+
+        </RelativeLayout>
+    </FrameLayout>
 </LinearLayout>
