--- a/RouteCar/app/src/main/res/layout/layout1.xml
+++ b/RouteCar/app/src/main/res/layout/layout1.xml
@@ -2,17 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="wrap_content"
     android:orientation="vertical">
-
-    <EditText
+    <LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content">
+    <TextView android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FROM:"></TextView>
+        <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/fromText"
+            android:layout_marginLeft="10dp"
         />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+        <TextView android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="TO:"></TextView>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/toText"
+        android:layout_marginLeft="24dp"
         />
+        </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent" android:layout_height="wrap_content"
         android:orientation="vertical">
