--- a/RouteCar/app/src/main/res/layout/layout1.xml
+++ b/RouteCar/app/src/main/res/layout/layout1.xml
@@ -26,7 +26,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/navigateBtn"
-                android:text="Naivigate"/>
+                android:text="Navigate"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent" android:layout_height="wrap_content"
