--- a/RouteCar/app/src/main/res/layout/pathview.xml
+++ b/RouteCar/app/src/main/res/layout/pathview.xml
@@ -17,7 +17,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:src="@drawable/plussign"
-            android:layout_weight="10">
+            android:layout_weight="10"
+            android:id="@+id/plusSignId">
             </ImageView>
     </LinearLayout>
 </LinearLayout>
