--- a/RouteCar/app/src/main/res/layout/layout1.xml
+++ b/RouteCar/app/src/main/res/layout/layout1.xml
@@ -26,7 +26,8 @@
     </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent" android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:id="@+id/rootForMapView">
             <FrameLayout
                 android:id="@+id/frameLayout"
                 android:layout_width="fill_parent"
